# Multi-Functional_Embedded_Center_Hub

./: .gitignore  .mxproject  Empty.ioc  LICENSE  Multi-Functional_Embedded_Center_Hub.ioc  Multi-Functional_Embedded_Center_Hub.uvprojx  README.md  startup_stm32f429xx.s
Core/Inc/: BenMoKeJi_M15.h  adc.h  bldc_actuators_testing.h  can_bus.h  digital_observer.h  encoder.h  exoskeleton.h  foshan_4dof_exoskeleton_tmotor.h  foshan_hip_exoskeleton.h  lcd_fonts.h  lcd_image.h  lcd_pwm.h  lcd_rgb.h  lcd_test.h  lcd_touch_screen.h  led_control.h  lktech_mg_motor.h  main.h  mrdoor.h  my_math.h  opticalencoder_acceleration_test.h  os_threads.h  sdram.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  system_periphrals.h  tmotor_ak10-9_v2.h  tmotor_ak10-9_v2_dmfw.h  touch_800x480.h  touch_iic.h  upper_limb.h  usart.h  usb.h  user_interface.h
Core/Src/: BenMoKeJi_M15.c  adc.c  bldc_actuators_testing.c  can_bus.c  digital_observer.c  encoder.c  exoskeleton.c  foshan_4dof_exoskeleton_tmotor.c  foshan_hip_exoskeleton.c  lcd_fonts.c  lcd_image.c  lcd_pwm.c  lcd_rgb.c  lcd_test.c  lcd_touch_screen.c  led_control.c  lktech_mg_motor.c  main.c  mrdoor.c  my_math.c  opticalencoder_acceleration_test.c  os_threads.c  sdram.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  system_periphrals.c  tmotor_ak10-9_v2.c  tmotor_ak10-9_v2_dmfw.c  touch_800x480.c  touch_iic.c  upper_limb.c  usart.c  usb.c  (+1 more)
Linux_End_Application/: CMakeLists.txt  ak10_9_calibration.cpp  crc32_mpeg.cpp  main.cpp  mfec_communication.cpp
Linux_End_Application/Inc/: ak10_9_calibration.hpp  crc32_mpeg.hpp  mfec_communication.hpp
(+6 files in other folders)
